--- a/My6705 .NET Framework 4.5/WireTest/WireTest.resx
+++ b/My6705 .NET Framework 4.5/WireTest/WireTest.resx
@@ -120,4 +120,7 @@
   <metadata name="testHandlerTimer.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>47, 23</value>
   </metadata>
+  <metadata name="tCountDown.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>249, 23</value>
+  </metadata>
 </root>
